# opencti-connector-vti

./: .gitignore  Dockerfile  README.md  config.reference.yml  docker-compose.yml  entrypoint.sh  pyproject.toml
.github/workflows/: publish.yml
data/: sample-bundle.json  sample-yara-ruleset.yara
tests/: test_config.py  test_virustotal_intelligence.py
virustotal_intelligence/: __init__.py  config.py  connector.py  console.py
